# Pita

./: .gitignore  .gitmodules  .travis.yml  BinaryEvaluator.hpp  CMakeLists.txt  Environment.hpp  Evaluator.hpp  FontShape.hpp  Geometry.hpp  LICENSE  Node.hpp  OptimizationEvaluator.hpp  Parser.hpp  Printer.hpp  Program.hpp  README.md  Source.cpp  Vectorizer.hpp
.github/workflows/: pitatest.yml
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/about/: index.html
docs/css/: theme.css
docs/download/: index.html
docs/en/: 404.html  index.html  index.xml  sitemap.xml
docs/en/categories/: index.html
docs/en/tags/: index.html
docs/ja/: 404.html  index.html  sitemap.xml
docs/ja/categories/: index.html
docs/ja/features/: index.html
docs/ja/features/geometry/: index.html
docs/ja/features/syntax/: index.html  index.xml
docs/ja/pitajs/: index.html  index.xml
docs/ja/reference/: index.html  index.xml
docs/ja/reference/constraint/: index.html  index.xml
docs/ja/reference/function/: index.html  index.xml
docs/ja/reference/record/: index.html  index.xml
docs/ja/start/: index.html  index.xml
docs/ja/start/download/: index.html
docs/ja/syntax/: index.html  index.xml
docs/ja/syntax/advanced/: index.html  index.xml
docs/ja/syntax/basic/: index.html
docs/ja/syntax/entry/: index.html
docs/ja/tags/: index.html
docs/ja/tutorial/: index.html  index.xml
docs/ja/tutorial/recycle/: index.html
docs/js/pita/: pita.js  pita.wasm  pita_api.js
docs/page/1/: index.html
docs/pita-home/: index.html
docs/pita_doc/: config.toml  hyde_y_config.toml
docs/pita_doc/content/: _index.ja.md
docs/pita_doc/content/features/: _index.ja.md
docs/pita_doc/content/features/constraint/: _index.ja.md
docs/pita_doc/content/features/geometry/: _index.ja.md
docs/pita_doc/content/features/syntax/: _index.ja.md
docs/pita_doc/content/post/: about.md  download.md  pita-home.md  syntax.md  tutorial.md
docs/pita_doc/content/reference/: _index.ja.md
docs/pita_doc/content/reference/constraint/: _index.ja.md
docs/pita_doc/content/reference/function/: _index.ja.md
docs/pita_doc/content/reference/record/: _index.ja.md
docs/pita_doc/content/start/: _index.ja.md
docs/pita_doc/content/start/download/: _index.ja.md
docs/pita_doc/content/syntax/: _index.ja.md
docs/pita_doc/content/syntax/advanced/: _index.ja.md
docs/pita_doc/content/syntax/basic/: _index.ja.md
docs/pita_doc/content/syntax/entry/: _index.ja.md
docs/pita_doc/content/tutorial/: _index.ja.md
docs/pita_doc/content/tutorial/recycle/: _index.ja.md
docs/pita_doc/data/: Menu.toml
docs/pita_doc/public/: 404.html  index.html  index.xml  sitemap.xml
docs/pita_doc/public/about/: index.html
docs/pita_doc/public/css/: style.css  theme.css
docs/pita_doc/public/download/: index.html
docs/pita_doc/public/en/: 404.html  index.html  index.xml
docs/pita_doc/public/en/categories/: index.html  index.xml
docs/pita_doc/public/en/tags/: index.html  index.xml
docs/pita_doc/public/ja/: 404.html  index.html  index.xml  sitemap.xml
docs/pita_doc/public/ja/categories/: index.html  index.xml
docs/pita_doc/public/ja/features/: index.xml
docs/pita_doc/public/ja/features/constraint/: index.html  index.xml
docs/pita_doc/public/ja/features/geometry/: index.xml
docs/pita_doc/public/ja/reference/: index.html
docs/pita_doc/public/ja/reference/constraint/: index.html
docs/pita_doc/public/ja/reference/function/: index.html
docs/pita_doc/public/ja/start/: index.html  index.xml
docs/pita_doc/public/ja/syntax/: index.html
docs/pita_doc/public/ja/tags/: index.html  index.xml
docs/pita_doc/public/ja/tutorial/: index.html
docs/pita_doc/public/page/1/: index.html
docs/pita_doc/public/pita-home/: index.html
docs/pita_doc/public/post/: index.html  index.xml
docs/pita_doc/public/syntax/: index.html
docs/pita_doc/public/tags/: index.html  index.xml
docs/pita_doc/public/topics/: index.html  index.xml
docs/pita_doc/public/tutorial/: index.html
docs/post/: index.html  index.xml
docs/post/page/1/: index.html
docs/syntax/: index.html
docs/tags/: index.html  index.xml
docs/topics/: index.html  index.xml
docs/tutorial/: index.html
examples/: 3rects.cgl  3rects_1.cgl  align.cgl  bug1.cgl  cfg_test.cgl  cfg_test1.cgl  cfg_test2.cgl  common.cgl  constraint_CFG.dot  constraint_dependency.cgl  context_free.cgl  context_free2.cgl  cross.cgl  data.cgl  dataplot.pita  dataplot2.cgl  debug1.cgl  debug_pita_p1.cgl  deform1.cgl  demo1.cgl  demo10.cgl  demo11.cgl  demo12.cgl  demo13.cgl  demo13_.cgl  demo13__.cgl  demo13___.cgl  demo14.cgl  demo15.cgl  demo2.cgl  demo2_.cgl  demo2__.cgl  demo2___.cgl  demo3.cgl  demo3_.cgl  demo4.cgl  demo5.cgl  demo5_.cgl  demo5__.cgl  demo6.cgl  (+103 more)
include/Pita/: BinaryEvaluator.hpp  ClosureMaker.hpp  Context.hpp  DynamicDeferredIdentifierSearcher.hpp  Environment.hpp  Error.hpp  Evaluator.hpp  ExprTransformer.hpp  FontDataJP  FontShape.hpp  Geometry.hpp  Graph.hpp  IntrinsicGeometricFunctions.hpp  Node.hpp  OptimizationEvaluator.hpp  Parser.hpp  PitaStd  Printer.hpp  Program.hpp  RoughMemoryManager.hpp  StaticDeferredIdentifierSearcher.hpp  TreeLogger.hpp  Util.hpp  ValueCloner.hpp  Vectorizer.hpp  _PitaStd  temp_PitaStd
include/Pita/Licences/: CppNumericalSolvers  Eigen  OpenSiv3D  cereal  cxxopts  geos_1  geos_10  geos_11  geos_12  geos_13  geos_14  geos_2  geos_3  geos_4  geos_5  geos_6  geos_7  geos_8  geos_9  libcmaes_1  libcmaes_2  libcmaes_3  libcmaes_4  libcmaes_5
source/: BinaryEvaluator.cpp  ClosureMaker.cpp  Context.cpp  DynamicDeferredIdentifierSearcher.cpp  Environment.cpp  Evaluator.cpp  ExprTransformer.cpp  FontShape.cpp  Geometry.cpp  Graph.cpp  IntrinsicGeometricFunctions.cpp  Node.cpp  OptimizationEvaluator.cpp  Parser.cpp  Printer.cpp  Program.cpp  RoughMemoryManager.cpp  ShapeRecordCompressor.cpp  ShapeRecordConverter.cpp  ShapeRecordInterpreter.cpp  ShapeRecordSVGWriter.cpp  Source.cpp  StaticDeferredIdentifierSearcher.cpp  TreeLogger.cpp  ValueCloner.cpp  Vectorizer.cpp
test/: CMakeLists.txt  pita_examples.cpp  pita_test.cpp
(+9 files in other folders)
